# ZenPatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/zenpatch/manager/: MainActivity.kt  ZenPatchApp.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/drawable-v24/: ic_launcher.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  file_provider_paths.xml
bridge/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
bridge/src/main/cpp/: CMakeLists.txt  bridge.cpp  hidden_api_bypass.cpp  hook_engine.cpp  symbol_resolver.cpp  zenpatch_bridge.cpp
bridge/src/main/cpp/include/: zenpatch_bridge.h
bridge/src/main/java/dev/zenpatch/bridge/: NativeBridge.kt
cli/: build.gradle.kts  proguard-rules.pro
docs/: android16-hardening.md  architecture.md  security-audit.md
gradle/: libs.versions.toml
patcher/: build.gradle.kts  proguard-rules.pro
privilege/: build.gradle.kts  proguard-rules.pro
privilege/src/main/: AndroidManifest.xml
runtime/: build.gradle.kts  proguard-rules.pro
runtime/src/main/: AndroidManifest.xml
xposed-api/: build.gradle.kts  proguard-rules.pro
(+77 files in other folders)
